Make sure value boxes retain size ratio when small and make sure grey backed textOutput is legible when child of primary color backed value box

--- a/inst/editor/src/Shiny-Ui-Elements/Bslib/ValueBox/ValueBox.module.css
+++ b/inst/editor/src/Shiny-Ui-Elements/Bslib/ValueBox/ValueBox.module.css
@@ -21,6 +21,10 @@ of the card */
   grid-template-areas: "showcase content";
 }
 
+.value_box > * {
+  min-width: 0;
+}
+
 .value_box.showcase_right {
   grid-template-columns: 7fr 3fr;
   grid-template-areas: "content showcase";
